# AI-COMPLIANCE-DEVNET-2808

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  test_cli_connection.py  test_cli_debug.py
agents/compliance/: main.py
agents/compliance/graph/: graph.py  models.py  shared.py
agents/compliance/tools/: compliance_lc_tools.py  cwm_lc_tools.py  lc_tools_list.py  nso_lc_tools.py  nso_tools.py  remediation_lc_tools.py
agents/compliance/tools/connectors/cwm_connector/: request_handler.py
agents/compliance/tools/connectors/nso_connector_cli/: compliance_manager.py  exeptions.py  nso_client_cli.py  report_downloader.py
agents/compliance/tools/connectors/nso_connector_jsonrpc/: nso_report_downloader.py  report_downloader.py  report_preprocessor.py
agents/prompts/: prompts.py
common/: llm.py
config/: config.py  logging_config.py
docker/: Dockerfile.compliance-agent  Dockerfile.compliance-supervisor  Dockerfile.ui  ui-build-and-serve.sh
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/Chat/: ChatArea.tsx  UserMessage.tsx
frontend/src/components/MainArea/: MainArea.tsx
frontend/src/components/Navigation/: Navigation.tsx
frontend/src/components/Sidebar/: Sidebar.tsx
frontend/src/hooks/: useAgentAPI.ts
frontend/src/stores/: auctionStreamingStore.ts  groupStreamingStore.ts
frontend/src/utils/: const.ts  graphConfigs.tsx  patternUtils.ts  urls.json
workflows/: AUDIT.json  REMEDIATION.json
(+18 files in other folders)
